...
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="20"
                android:text="@string/defaultPrice"/>

            <ImageView
                android:id="@+id/groceryDownArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/expandArrow"
                android:padding="5dp"
                android:src="@drawable/ic_down_arrow" />
...
            android:layout_height="wrap_content"
            android:layout_below="@id/groceryViewCollapsed"
            android:visibility="gone"
            android:weightSum="100">

            <Button
                android:id="@+id/btnBuyItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnBuy"
                android:backgroundTint="@color/greenColour3"/>

            <Button
                android:id="@+id/btnEditGroceryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnEdit"
                android:backgroundTint="@color/greenColour3"/>

            <Button
                android:id="@+id/btnRemoveGroceryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="33"
                android:text="@string/btnRemove"
                android:backgroundTint="@color/greenColour3"/>
...
