<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/greenColour1">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:clipToPadding="false">
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="7dp"
    android:backgroundTint="@color/greenColour2"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="32dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <TextView
        android:id="@+id/addItemToGroceryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/titleAddToGrocery"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/addItemToGroceryTitle" />

    <EditText
        android:id="@+id/inputGroceryItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelQuantityToBuy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputGroceryItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintQuantityToBuy"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelUnits"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputGroceryItemUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUnits"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtAddGroceryPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelPrice"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

    <EditText
        android:id="@+id/inputGroceryItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPrice"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="9"
        app:layout_constraintBottom_toBottomOf="@id/txtAddGroceryPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline10"
        app:layout_constraintTop_toTopOf="@id/txtAddGroceryPrice" />

    <TextView
        android:id="@+id/txtAddGroceryCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelCalories"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/txtAddGroceryPrice"/>

    <EditText
        android:id="@+id/inputGroceryItemCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintCalories"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintBottom_toBottomOf="@id/txtAddGroceryCalories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline10"
        app:layout_constraintTop_toTopOf="@id/txtAddGroceryCalories" />

    <TextView
        android:id="@+id/txtAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/labelAllergies"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/txtAddGroceryCalories"/>

    <CheckBox
        android:id="@+id/inputCheckGroceryLactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkLactose"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/txtAllergies"/>

    <CheckBox
        android:id="@+id/inputCheckGroceryEggs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkEggs"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/inputCheckGroceryLactose"/>

    <CheckBox
        android:id="@+id/inputCheckGroceryFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkFish"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/inputCheckGroceryEggs"/>

    <CheckBox
        android:id="@+id/inputCheckGroceryGluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkGluten"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/txtAllergies"/>

    <CheckBox
        android:id="@+id/inputCheckGroceryNuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkNuts"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/inputCheckGroceryGluten"/>

    <CheckBox
        android:id="@+id/inputCheckGrocerySoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkSoy"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/inputCheckGroceryNuts"/>

    <Button
        android:id="@+id/btnCancelAddGrocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btnCancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCheckGroceryFish"
        android:backgroundTint="@color/greenColour3"/>

    <Button
        android:id="@+id/btnAddGroceryItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_weight=".40"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelAddGrocery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/btnCancelAddGrocery"
        android:backgroundTint="@color/greenColour3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>