...
        android:layout_marginTop="8dp"
        android:text="@string/checkSoy"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/checkGroceryNuts"/>

    <EditText
        android:id="@+id/editGroceryItemName"
        android:transitionName="itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
...
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/editGroceryQuantity"
        android:transitionName="itemQuantityToBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintQuantityToBuy"
        android:importantForAutofill="no"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkGroceryFish"
        android:backgroundTint="@color/greenColour3"/>

    <Button
        android:id="@+id/btnEditGrocerySubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toBottomOf="@+id/btnGroceryEditCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
...
